Fixed few alignment issues in GUI

--- a/tak-web/web-app/css/main.css
+++ b/tak-web/web-app/css/main.css
@@ -624,16 +624,37 @@ a.skip {
 }
 
 .rightmostColumn {
-	width: 5%;
+	width: 7%;
 }
 
-.publish.firtColumn {
-	width: 16%;
+.publish.header.firstColumn {
+	width: 2%;
 }
 
-.publish.secondColumn {
-	width: 30%;
+.publish.header.secondColumn {
+	width: 83%;
+}
 
-.publish.thirdColumn {
-	width: 41%;
+.publish.header.thirdColumn {
+	width: 1%;
+}
+
+.publish.header.fourthColumn {
+	width: 1%;
+}
+
+.publish.body.firstColumn {
+	width: 2%;
+}
+
+.publish.body.secondColumn {
+	width: 15%;
+}
+
+.publish.body.thirdColumn {
+	width: 70%;
+}
+
+.publish.body.fourthColumn {
+	width: 1%;
 }
